--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1183,6 +1183,7 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  margin-bottom: 60px;
 }
 
 .card__header {
