--- a/views/index.html
+++ b/views/index.html
@@ -44,15 +44,15 @@
     </div>
   </header>
       <section class="container-fluid">
-        <div class="row min-vh-100">
+        <div class="row min-vh-100" style="background-color:mediumpurple;">
           <div class="col-sm-3" style="background-color:mediumpurple;"></div>
           <div class="col-sm-6" style="background-color:lavender;">
 
             <div class="card">
               <img class="card-img-top mx-auto d-block" src="https://pink-glamorous-cuckoo-175.mypinata.cloud/ipfs/QmYsTtGKMpUjuCLC7wXf65BXhSytobiAzprEywvTYT3NP2" alt="Card image" style="width:40%">
-              <div class="card-body">
-                <h4 class="card-title">SOC Remembrance Token</h4>
-                <p class="card-text">This token is created for SOC internal usage</p>
+              <div class="card-body card-container" style="margin-bottom:60px"">
+                <h4 class="card-title" style="text-align: center;">SOC Remembrance Token</h4>
+                <p class="card-text" style="text-align: center;">This token is created for SOC internal usage</p>
                 <div class="row">
                   <h5><strong>My Wallet : </strong></strongMy><small id="MyTokenWallet"></small></h5>
                   <h5><strong>Balance</strong>: <small id="MyTokenBalance"></small> SOC</h5>
