--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1183,7 +1183,7 @@ body {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  margin-bottom: 60px;
+  
 }
 
 .card__header {
@@ -1293,6 +1293,10 @@ body {
   justify-self: end;
   -ms-flex-item-align: center;
   align-self: center;
+}
+
+.card-body{
+  margin-bottom: 60px;
 }
 
 .error {
