--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Ticket - Wallet</title>
+  <title>SOC Token - Wallet</title>
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   <!-- Libraries BS, JQuery, Web3, Truffle-Contract, App -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
